:bug: fixed overflow and title

--- a/_css/layout/_overflow.css
+++ b/_css/layout/_overflow.css
@@ -1,3 +1,7 @@
 .overflow-y-scroll {
     overflow-y: auto;
 }
+
+.overflow-hidden {
+    overflow: hidden;
+}
